Fixed small issue with wrapping

--- a/resume/sass/screen.sass
+++ b/resume/sass/screen.sass
@@ -244,11 +244,12 @@ body
                 margin-left: -4px
             .years
                 position: inherit
-                right: 0
+                left: 0
                 direction: ltr
                 width: auto
                 margin-left: 20px
             .what
+                display: block
                 position: inherit
                 left: 0
                 margin-left: 20px
